--- a/build.gradle
+++ b/build.gradle
@@ -61,7 +61,7 @@ dependencies {
     testImplementation 'org.json:json:20180813'
 }
 
-apply from: rootProject.file('gradle/attach-jar.gradle')
-apply from: rootProject.file('gradle/upload.gradle')
-apply from: rootProject.file('gradle/sign.gradle')
-apply from: rootProject.file('gradle/promote.gradle')
+// apply from: rootProject.file('gradle/attach-jar.gradle')
+// apply from: rootProject.file('gradle/upload.gradle')
+// apply from: rootProject.file('gradle/sign.gradle')
+// apply from: rootProject.file('gradle/promote.gradle')
